[tool.poetry]
name = "value-keeping-generator"
version = "0.1.0"
description = ""
authors = ["'Gilad Barnea' <gilad.b@pecan.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
output-format = "full"
show-fixes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
